[package]
name        = "longhaul-server"
description = "MCP 2026-07-28 RC — axum-based stateless HTTP server framework"
edition.workspace   = true
version.workspace   = true
authors.workspace   = true
license.workspace   = true
rust-version.workspace = true

[dependencies]
longhaul-core = { workspace = true }
tokio         = { workspace = true }
axum          = { workspace = true }
tower         = { workspace = true }
tower-http    = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
